[package]
name = "sha512n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
rand = "0.8.5"
generic-array = "0.14.6"
rustc-serialize = "0.3.24"
itertools = "0.10.5"
blake3 = "1.3.3"
sha3 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "sha2_bench"
harness = false